fixed white space problem

--- a/css/main.css
+++ b/css/main.css
@@ -147,7 +147,7 @@ header {
 
     display: none;
     position: absolute;
-    bottom: 500px;
+    bottom: 540px;
     right: 255px;
     background-color: #FEF2E6;
     min-width: 70px;
